--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_executable(List_Test MapTest.cpp Map.hpp List.hpp)
+add_executable(List_Test MapTest.cpp Map.hpp List.hpp PathFinding.hpp City.hpp Path.hpp)
